examples/v0.6/errors/condition_not_boolean.nova
value: N = 10

while value {

}

// Expected: Condition must evaluate to a Boolean value.